Add code to recreate the SQL IN keyword in .net code.

--- a/DotNETUtils/DotNETUtils.csproj
+++ b/DotNETUtils/DotNETUtils.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="BoundedString.cs" />
     <Compile Include="DataStructures\TreeNode.cs" />
+    <Compile Include="Extensions\ObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
