--- a/DotNETUtils/DotNETUtils.csproj
+++ b/DotNETUtils/DotNETUtils.csproj
@@ -45,6 +45,7 @@
     <Compile Include="DataStructures\TreeNode.cs" />
     <Compile Include="Extensions\ObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnicodeConstants.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
